# browsers

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build-linux.sh  build-mac.sh  build-windows.sh  build.rs  rustfmt.toml
.cargo/: config.toml
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: builder.yml  ci.yml  win-test.yml
.run/: run with long url.run.xml
cross/: Dockerfile.linux_aarch64  Dockerfile.linux_armv7  Dockerfile.linux_x86_64  build-cross-images.sh
extra/linux/: README.md  linux-build-file-tree.sh  linux-deb-build.sh  linux-rpm-build.sh  setup-handler.sh
extra/linux/deb/DEBIAN/: template.control
extra/linux/rpm/SPECS/: template.browsers.spec
extra/macos/: Entitlements.plist  Info.plist
extra/macos/dmg/: .gitignore  mac-dmg-build.sh
extra/macos/dmg/dmg_source/: .VolumeIcon.icns
resources/i18n/en-US/: builtin.ftl
resources/lib/: application-repository.toml
resources/repository/: application-repository.toml
src/: browser_repository.rs  chromium_profiles_parser.rs  communicate.rs  firefox_profiles_parser.rs  lib.rs  linux_utils.rs  macos_utils.rs  main.rs  paths.rs  slack_profiles_parser.rs  slack_url_parser.rs  ui.rs  url_rule.rs  utils.rs  vivaldi_workspaces_parser.rs  windows_utils.rs
src/gui/: about.rs  about_dialog.rs  focus_widget.rs  image_controller.rs  linux_ui.rs  main_window.rs  mod.rs  settings_dialog.rs  ui.rs  ui_theme.rs  ui_util.rs
src/gui/settings_window/: advanced_view.rs  appearance_view.rs  general_view.rs  mod.rs  rules_view.rs
src/gui/shared/: directories_info.rs  mod.rs  restore_apps.rs
src/linux/: linux_utils.rs  mod.rs
src/macos/: mac_paths.rs  macos_native.rs  macos_utils.rs  mod.rs
src/windows/: mod.rs  windows_utils.rs
tools/: extract_release_notes.sh
tools/appcast/: appcast.xml  append_item.sh  create_item.sh
